--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Graduated in the class top 10% <br /></p>
 <ul>
   <li>
     <p><strong>University of Vigo, Vigo, Spain</strong> <br />
-      Graduate Student Research, present<br />
+      Graduate Student Researcher, present<br />
       <a href="https://www.uvigo.gal/en">University of Vigo</a></p>
   </li>
   <li>
