--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <p><img align="right" width="150" height="140" src="x_rigueira.jpg" /></p>
 
 <p>
-I am a Graduate Student Researcher at the <a href="http://minaseenerxia.uvigo.es/es/">School of Mining and Energy Engineering</a> with affiliation to the <a href="https://www.uvigo.gal/en">University of Vigo</a>. My research is focused on the applications of <strong>functional data analysis</strong> and <strong>machine learning</strong> for the detection and prediction of environmental events.</p>
+I am a Graduate Student Researcher at the <a href="http://minaseenerxia.uvigo.es/es/">School of Mining and Energy Engineering</a> with affiliation to the <a href="https://www.uvigo.gal/en">University of Vigo</a>. My research is focused on the development of new, robust, and efficient algorithms for <strong>computer vision<strong>, <strong>functional data analysis</strong> and <strong>machine learning</strong> applications. My current work aims to improve the detection and prediction of environmental events.</p>
 
 <h2 id="education">Education</h2>
 <ul>
