--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ I am a Graduate Student Researcher at the <a href="http://minaseenerxia.uvigo.es
 <h2 id="education">Education</h2>
 <ul>
   <li>
-    <p><strong>M.S. at the Universidad of Vigo, Spain, 2020</strong> <br />
+    <p><strong>M.S. at the University of Vigo, Spain, 2020</strong> <br />
 <a href="http://minaseenerxia.uvigo.es/es/">School of Mining and Energy Engineering</a> <br />
 Advisers: Prof. Pablo Eguia Oller and David Lopez Mera  <br />
 Thesis: Design and Simulation on MATLAB/Simulink of a solar carport.  <br /></p>
