--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
       
 <h1 id="welcome-to-xurxo-rigueira-homepage">Welcome to Xurxo Rigueira’s Homepage!</h1>
-<p><img align="right" width="150" height="180" src="x_rigueira.jpg" /></p>
+<p><img align="right" width="150" height="180" src="x_rigueira_2.JPG" /></p>
 
 <p>
-I am a Graduate Student Researcher at the <a href="http://minaseenerxia.uvigo.es/es/">School of Mining and Energy Engineering</a> with affiliation to the <a href="https://www.uvigo.gal/en">University of Vigo</a>. My research is focused on the development of new, robust, and efficient algorithms for <strong>computer vision</strong>, <strong>functional data analysis</strong> and <strong>machine learning</strong> applications. My current work aims to improve the detection and prediction of environmental events.</p>
+I am a Research Assistant at the <a href="http://minaseenerxia.uvigo.es/es/">School of Mining and Energy Engineering</a> with affiliation to the <a href="https://www.uvigo.gal/en">University of Vigo</a>. My research is focused on the development of new, robust, and efficient algorithms for <strong>computer vision</strong>, <strong>functional data analysis</strong> and <strong>machine learning</strong> applications. My current work aims to improve the detection and prediction of environmental events.</p>
 
 <h2 id="education">Education</h2>
 <ul>
@@ -64,12 +64,21 @@ Industrial and Process Engineer, 2020<br />
   </li>
 </ul>
 
+<h2 id="research-on-functional-data-analysis-">Research on <em>functional data analysis</em></h2>
+<ul>
+  <li>
+    <p><a href="https://www.mdpi.com/2227-7390/10/14/2374"><strong>Functional Data Analysis for the Detection of Outliers and Study of the Effects of the COVID-19 Pandemic on Air Quality: A Case Study in Gijon, Spain</strong></a> <br />
+<strong>X. Rigueira</strong>, J. Martinez, M. Araujo, P.J. Garcia-Nieto and I. Ocarranza<br />
+<i>Mathematics<i> <strong>2022</strong>, 10 (14), 2374</p>
+  </li>
+</ul>
+
 <h2 id="research-on-computer-vision">Research on <em>computer vision</em></h2>
 <ul>
   <li>
-    <p><a href="https://universidadevigo-my.sharepoint.com/:b:/g/personal/xurxo_rigueira_uvigo_gal/EcPG3j_BpBpJiMGH2yWsoCUBl310m7g2dOwjlopXwkqiKw?e=Sywd88"><strong>Computer Vision Application for Improved Product Traceability in the Granite Manufacturing Industry</strong></a> <br />
+    <p><a href="https://arxiv.org/abs/2207.01323"><strong>Computer Vision Application for Improved Product Traceability in the Granite Manufacturing Industry</strong></a> <br />
 <strong>X. Rigueira</strong>, M. Araujo, J. Martinez, E. Giraldez and A. Recaman <br />
-Submitted for peer-review</p>
+<i>arXiv</i> <strong>2022</strong> </p>
   </li>
 </ul>
 
