--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Graduated in the class top 10% <br /></p>
 <ul>
   <li>
     <p><strong>University of Vigo, Vigo, Spain</strong> <br />
-      Graduate Student Researcher, present<br />
+      Research Assistant, present<br />
       <a href="https://www.uvigo.gal/en">University of Vigo</a></p>
   </li>
   <li>
@@ -68,8 +68,8 @@ Industrial and Process Engineer, 2020<br />
 <ul>
   <li>
     <p><a href="https://www.mdpi.com/2227-7390/10/14/2374"><strong>Functional Data Analysis for the Detection of Outliers and Study of the Effects of the COVID-19 Pandemic on Air Quality: A Case Study in Gijon, Spain</strong></a> <br />
-<strong>X. Rigueira</strong>, J. Martinez, M. Araujo, P.J. Garcia-Nieto and I. Ocarranza<br />
-<i>Mathematics<i>, <strong>2022</strong>, 10 (14), 2374</p>
+<strong>X. Rigueira</strong>, J. Martinez, M. Araujo, P.J. Garcia-Nieto and I. Ocarranza <br />
+<i>Mathematics<i>, <strong>2022</strong>, 10 (14), 2374 </p>
   </li>
 </ul>
 
