Fixed University name

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Advisers: Prof. Pablo Eguia Oller and David Lopez Mera  <br />
 Thesis: Design and Simulation on MATLAB/Simulink of a solar carport.  <br /></p>
   </li>
   <li>
-    <p><strong>B.S. at California State University, USA, 2018</strong> <br />
+    <p><strong>B.S. at California State University, East Bay, USA, 2018</strong> <br />
       Major: <a href="https://www.csueastbay.edu/">Environmental Engineering</a> <br />
       International Student <br /></p>
   </li>
