--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ I am a Research Assistant at the <a href="http://minaseenerxia.uvigo.es/es/">Sch
   <li>
     <p><strong>M.S. at the University of Vigo, Spain, 2020</strong> <br />
 <a href="http://minaseenerxia.uvigo.es/es/">School of Mining and Energy Engineering</a> <br />
-Advisers: Prof. Pablo Eguia Oller and David Lopez Mera  <br />
-Thesis: Design and Simulation on MATLAB/Simulink of a solar carport.  <br /></p>
+Advisers: Prof. Dr. Pablo Eguia Oller and David Lopez Mera  <br />
+Thesis: Design and simulation on MATLAB/Simulink of a solar carport.  <br /></p>
   </li>
   <li>
     <p><strong>B.S. at California State University, East Bay, USA, 2018</strong> <br />
@@ -46,7 +46,6 @@ Thesis: Design and Simulation on MATLAB/Simulink of a solar carport.  <br /></p>
   <li>
     <p><strong>B.S. at the University of Vigo, Spain, 2018</strong>  <br />
 Major: <a href="http://minaseenerxia.uvigo.es/es/">Mining and Energy Resources Engineering</a> <br /> </p>
-<!-- Graduated in the class top 10% <br /></p> -->
   </li>
 </ul>
 
@@ -67,7 +66,7 @@ Industrial and Process Engineer, 2020<br />
 <h2 id="research-on-functional-data-analysis-">Research on <em>functional data analysis</em></h2>
 <ul>
   <li>
-    <p><a href="https://www.mdpi.com/2227-7390/10/14/2374"><strong>Functional Data Analysis for the Detection of Outliers and Study of the Effects of the COVID-19 Pandemic on Air Quality: A Case Study in Gijon, Spain</strong></a> <br />
+    <p><a href="https://www.mdpi.com/2227-7390/10/14/2374"><strong><i>Data Analysis for the Detection of Outliers and Study of the Effects of the COVID-19 Pandemic on Air Quality: A Case Study in Gijon, Spain</i></strong></a> <br />
 <strong>X. Rigueira</strong>, J. Martinez, M. Araujo, P.J. Garcia-Nieto and I. Ocarranza <br />
 <i>Mathematics<i>, <strong>2022</strong>, 10 (14), 2374 </p>
   </li>
