author changes cv

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Industrial and Process Engineer, 2020<br />
 <ul>
   <li>
     <p><a href="https://arxiv.org/abs/2207.01323"><strong>Computer Vision Application for Improved Product Traceability in the Granite Manufacturing Industry</strong></a> <br />
-<strong>X. Rigueira</strong>, M. Araujo, J. Martinez, E. Giraldez and A. Recaman <br />
+<strong>X. Rigueira</strong>, J. Martinez, M. Araujo, and A. Recaman <br />
 <i>arXiv</i>, <strong>2022</strong> </p>
   </li>
 </ul>
