fixed caps first paper

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Industrial and Process Engineer, 2020<br />
 <h2 id="research-on-functional-data-analysis-">Research on <em>functional data analysis</em></h2>
 <ul>
   <li>
-    <p><a href="https://www.mdpi.com/2227-7390/10/14/2374"><strong><i>Data Analysis for the Detection of Outliers and Study of the Effects of the COVID-19 Pandemic on Air Quality: A Case Study in Gijon, Spain</i></strong></a> <br />
+    <p><a href="https://www.mdpi.com/2227-7390/10/14/2374"><strong><i>Functional data analysis for the detection of outliers and study of the effects of the COVID-19 pandemic on air quality: a case study in Gijon, Spain</i></strong></a> <br />
 <strong>X. Rigueira</strong>, J. Martinez, M. Araujo, P.J. Garcia-Nieto and I. Ocarranza <br />
 <i>Mathematics<i>, <strong>2022</strong>, 10 (14), 2374 </p>
   </li>
