Changes status bayesian work

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Industrial and Process Engineer, 2020<br />
   <li>
     <p><a href="https://universidadevigo-my.sharepoint.com/:w:/g/personal/xurxo_rigueira_uvigo_gal/EapfuvONp2RPnzS2dISpBTYBEkATbEPS4_nsi5-UPmgFiQ?e=aCjn9F"><strong>Introducing Information Theory to Assess Roofing Slate Quality</strong></a> <br />
 E. Giraldez, S. Gerassis, M. Pazo-Rodriguez, <strong>X. Rigueira</strong>, A. Saavedra and J. Taboada <br />
-Submitted for peer-review</p>
+Work in progress</p>
   </li>
 </ul>
 
