changes to the heading

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       
 
       
-<h1 id="welcome-to-xurxo-rigueira-homepage">Welcome to Xurxo Rigueira’s Homepage!</h1>
+<h1 id="Xurxo Rigueira" style="text-align:center">Xurxo Rigueira</h1>
+<p>Research Assistant at the University of Vigo</p> <p style="color:blue;">xurxo.rigueira@uvigo.es</p>
 <p><img align="right" width="180" height="150" src="x_rigueira_2.JPG" /></p>
 
 <p>
