--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Industrial and Process Engineer, 2020<br />
   </li>
 </ul>
 
-<h2 id="research-on-functional-data-analysis-">Research on <em>functional data analysis</em></h2>
+<h2 id="research-on-functional-data-analysis-"><i> Research on</i> <em>functional data analysis</em></h2>
 <ul>
   <li>
     <p><a href="https://www.mdpi.com/2227-7390/10/14/2374"><strong><i>Functional data analysis for the detection of outliers and study of the effects of the COVID-19 pandemic on air quality: a case study in Gijon, Spain</i></strong></a> <br />
