Changed headline and name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://xrigueira.github.io/" />
 <meta property="og:site_name" content="Xurxo’s homepage" />
 <script type="application/ld+json">
-{"@type":"WebSite","headline":"Welcome to Xurxo Rigueira’s Homepage!","url":"https://xrigueira.github.io/","name":"Xurxo’s homepage","@context":"https://schema.org"}</script>
+{"@type":"WebSite","headline":"Xurxo Rigueira Diaz!","url":"https://xrigueira.github.io/","name":"Xurxo’s homepage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <link rel="stylesheet" href="/style.css">
