--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       
 <h1 id="Xurxo Rigueira" style="text-align:center">Xurxo Rigueira</h1>
-<p>Research Assistant at the University of Vigo</p> <p style="color:blue;">xurxo.rigueira@uvigo.es</p>
+<p>Research Assistant at the University of Vigo.</p> <p style="color:blue;">xurxo.rigueira@uvigo.es</p>
 <p><img align="right" width="180" height="150" src="x_rigueira_2.JPG" /></p>
 
 <p>
