--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
 <p>Research Assistant at the University of Vigo.</p> <p style="color:blue;">xurxo.rigueira@uvigo.es</p>
 <p><img align="right" width="180" height="150" src="x_rigueira_2.JPG" /></p>
 
-<p>
-I am a Research Assistant at the <a href="http://minaseenerxia.uvigo.es/es/">School of Mining and Energy Engineering</a> with affiliation to the <a href="https://www.uvigo.gal/en">University of Vigo</a>. My research is focused on the development of new, robust, and efficient algorithms for <strong>functional data analysis</strong>, <strong>machine learning</strong>, and <strong>computer vision</strong> applications. My current work aims to improve the detection and prediction of environmental events.</p>
+
+<h2 id="About me">About me</h2>
+<p>I am a Research Assistant at the <a href="http://minaseenerxia.uvigo.es/es/">School of Mining and Energy Engineering</a> with affiliation to the <a href="https://www.uvigo.gal/en">University of Vigo</a>. My research is focused on the development of new, robust, and efficient algorithms for <strong>functional data analysis</strong>, <strong>machine learning</strong>, and <strong>computer vision</strong> applications. My current work aims to improve the detection and prediction of environmental events.</p>
+
+<p>My research profiles: <a target="_blank" href="https://scholar.google.com/citations?user=K72o7J4AAAAJ&hl=en"><img src="https://www.pngwing.com/en/free-png-nutsm" alt="Google Scholar logo." /></a> </p>
 
 <h2 id="education">Education</h2>
 <ul>
