--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Industrial and Process Engineer, 2020<br />
 <h2 id="research-on-bayesian-networks">Research on <em>Bayesian networks</em></h2>
 <ul>
   <li>
-    <p><a href="https://universidadevigo-my.sharepoint.com/:b:/g/personal/xurxo_rigueira_uvigo_gal/ESc0Aavee3hAt-gL9X2cVRYBGOR6GjqorXYJE8c05rUjAQ?e=0HtEHA"><strong>Introducing Information Theory to Assess Roofing Slate Quality</strong></a> <br />
+    <p><a href=""><strong>Introducing Information Theory to Assess Roofing Slate Quality</strong></a> <br />
 E. Giraldez, S. Gerassis, M. Pazo-Rodriguez, <strong>X. Rigueira</strong>, A. Saavedra and J. Taboada <br />
 Work in progress</p>
   </li>
