--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@ Industrial and Process Engineer, 2020<br />
   </li>
 </ul>
 
-<h2 id="research-on-bayesian-networks">Research on <em>Bayesian networks</em></h2>
+<!-- <h2 id="research-on-bayesian-networks">Research on <em>Bayesian networks</em></h2>
 <ul>
   <li>
     <p><a href=""><strong>Introducing Information Theory to Assess Roofing Slate Quality</strong></a> <br />
 E. Giraldez, S. Gerassis, M. Pazo-Rodriguez, <strong>X. Rigueira</strong>, A. Saavedra and J. Taboada <br />
 Work in progress</p>
   </li>
-</ul>
+</ul> -->
 
 <p><em>Extra:</em> my grandpa's brother wrote a book. You can find it <a href="https://www.caotica.es/es/libro/rimas-lendas-e-races_G919780025">here</a></p>
 
