--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <h2 id="research-on-functional-data-analysis-"><i> Research on</i> <em>functional data analysis</em></h2>
 <ul>
   <li>
-    <p><a href="https://www.mdpi.com/2073-4441/15/8/1553"><strong><i>Bayesian Machine Learning and Functional Data Analysis as a Two-Fold Approach for the Study of Acid Mine Drainage Events</i></strong></a> <br />
+    <p><a href="https://www.mdpi.com/2073-4441/15/8/1553"><strong><i>Bayesian machine learning and functional data analysis as a two-fold approach for the study of acid mine drainage events</i></strong></a> <br />
     <strong>X. Rigueira</strong>, M. Pazo, M. Araujo, S. Gerassis and E. Bocos <br />
     <i>Water<i>, <strong>2023</strong>, 15 (8), 1553 </p>
   </li>
