Changes Marias Name

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   </li>
   <li>
     <p><a href="https://imm.webs.upv.es/jornadas/2022/abstracts/abstract25.pdf"><strong>Multivariate functional data analysis for outlier detection in environmental data</strong></a> <br />
-    <strong>X. Rigueira</strong>, J. Martinez, M. Araujo, M. Perez-Rodriguez and J. Taboada <br />
+    <strong>X. Rigueira</strong>, J. Martinez, M. Araujo, M. Pazo-Rodriguez and J. Taboada <br />
     <i>14th Congress on Mathematical Modelling in Engineering and Human Behaviour<i>, <strong>July, 2022</strong>. Valencia, Spain </p>
   </li>
 </ul>
