--- a/index.html
+++ b/index.html
@@ -118,6 +118,15 @@
   </li>
 </ul>
 
+<h2 id="research-on-artificial-intelligence-in-education">Research on <em>artificial intelligence in education</em></h2>
+<ul>
+  <li>
+    <p><a href="https://www.sciencedirect.com/science/article/pii/S2530380523000072?via%3Dihub"><strong>Impact of artificial intelligence on assessment methods in primary and secondary education: Systematic literature review</strong></a> <br />
+    M. Martinez-Comesana<strong>X. Rigueira-Diaz</strong>, A. Larranaga-Janeiro, J. Martinez-Torres, I. Ocarranza-Prado and D. Kreibel <br />
+    <i>Psicodicatica</i>, <strong>2023</strong> </p>
+  </li>
+</ul>
+
 <!-- <h2 id="research-on-bayesian-networks">Research on <em>Bayesian networks</em></h2>
 <ul>
   <li>
