--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
 <ul>
   <li>
     <p><a href="https://www.mdpi.com/2073-4441/15/8/1553"><strong><i>Bayesian machine learning and functional data analysis as a two-fold approach for the study of acid mine drainage events</i></strong></a> <br />
-    <strong>X. Rigueira</strong>, M. Pazo, M. Araujo, S. Gerassis and E. Bocos <br />
+    <strong>X. Rigueira</strong>, M. Pazo, M. Araujo, S. Gerassis, and E. Bocos <br />
     <i>Water<i>, <strong>2023</strong>, 15 (8), 1553 </p>
   </li>
   <li>
     <p><a href="https://www.mdpi.com/2227-7390/10/14/2374"><strong><i>Functional data analysis for the detection of outliers and study of the effects of the COVID-19 pandemic on air quality: a case study in Gijon, Spain</i></strong></a> <br />
-    <strong>X. Rigueira</strong>, J. Martinez, M. Araujo, P.J. Garcia-Nieto and I. Ocarranza <br />
+    <strong>X. Rigueira</strong>, J. Martinez, M. Araujo, P.J. Garcia-Nieto, and I. Ocarranza <br />
     <i>Mathematics<i>, <strong>2022</strong>, 10 (14), 2374 </p>
   </li>
   <li>
@@ -104,7 +104,7 @@
   </li>
   <li>
     <p><a href="https://imm.webs.upv.es/jornadas/2022/abstracts/abstract25.pdf"><strong>Multivariate functional data analysis for outlier detection in environmental data</strong></a> <br />
-    <strong>X. Rigueira</strong>, J. Martinez, M. Araujo, M. Pazo-Rodriguez and J. Taboada <br />
+    <strong>X. Rigueira</strong>, J. Martinez, M. Araujo, M. Pazo-Rodriguez, and J. Taboada <br />
     <i>14th Congress on Mathematical Modelling in Engineering and Human Behaviour<i>, <strong>July, 2022</strong>. Valencia, Spain </p>
   </li>
 </ul>
@@ -122,7 +122,7 @@
 <ul>
   <li>
     <p><a href="https://www.sciencedirect.com/science/article/pii/S2530380523000072?via%3Dihub"><strong>Impact of artificial intelligence on assessment methods in primary and secondary education: Systematic literature review</strong></a> <br />
-    M. Martinez-Comesana<strong>X. Rigueira-Diaz</strong>, A. Larranaga-Janeiro, J. Martinez-Torres, I. Ocarranza-Prado and D. Kreibel <br />
+    M. Martinez-Comesana<strong> X. Rigueira-Diaz</strong>, A. Larranaga-Janeiro, J. Martinez-Torres, I. Ocarranza-Prado, and D. Kreibel <br />
     <i>Psicodicatica</i>, <strong>2023</strong> </p>
   </li>
 </ul>
