--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
   </li>
 </ul>
 
+<h2 id="research-on-machine-learning">Research on <em>machine learning</em></h2>
+<ul>
+  <li>
+    <p><a href="https://wicc.gr""><strong>“Real-time incremental machine learning for an8omaly detection and surveillance in water quality</strong></a> <br />
+    <strong>X. Rigueira</strong>, D. Olivieri, M. Araujo, M. Pazo, and E. Alonso <br />
+    <i>Water Innovation and Circularity Conference<i>, <strong>June, 2023</strong>. Athens, Greece </p>
+  </li>
+</ul>
+
 <h2 id="research-on-computer-vision">Research on <em>computer vision</em></h2>
 <ul>
   <li>
