--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <h2 id="research-on-machine-learning">Research on <em>machine learning</em></h2>
 <ul>
   <li>
-    <p><a href="https://wicc.gr""><strong>“Real-time incremental machine learning for an8omaly detection and surveillance in water quality</strong></a> <br />
+    <p><a href="https://wicc.gr""><strong>Real-time incremental machine learning for an8omaly detection and surveillance in water quality</strong></a> <br />
     <strong>X. Rigueira</strong>, D. Olivieri, M. Araujo, M. Pazo, and E. Alonso <br />
     <i>Water Innovation and Circularity Conference<i>, <strong>June, 2023</strong>. Athens, Greece </p>
   </li>
