--- a/index.html
+++ b/index.html
@@ -121,18 +121,18 @@
 <h2 id="research-on-computer-vision">Research on <em>computer vision</em></h2>
 <ul>
   <li>
-    <p><a href="https://arxiv.org/abs/2207.01323"><strong>Computer Vision Application for Improved Product Traceability in the Granite Manufacturing Industry</strong></a> <br />
+    <p><a href="https://materconstrucc.revistas.csic.es/index.php/materconstrucc/article/view/3089"><strong>Computer Vision Application for Improved Product Traceability in the Granite Manufacturing Industry</strong></a> <br />
     <strong>X. Rigueira</strong>, J. Martinez, M. Araujo, and A. Recaman <br />
-    <i>arXiv</i>, <strong>2022</strong> </p>
+    <i>Materiales de Construcción</i>, <strong>2022</strong>, (73), 351 </p>
   </li>
 </ul>
 
 <h2 id="research-on-artificial-intelligence-in-education">Research on <em>artificial intelligence in education</em></h2>
 <ul>
   <li>
-    <p><a href="https://www.sciencedirect.com/science/article/pii/S2530380523000072#:~:text=The%20main%20contributions%20of%20the,robots%20to%20analyse%20their%20learning"><strong>Impact of artificial intelligence on assessment methods in primary and secondary education: Systematic literature review</strong></a> <br />
+    <p><a href="https://www.sciencedirect.com/science/article/pii/S2530380523000072?via%3Dihub"><strong>Impact of artificial intelligence on assessment methods in primary and secondary education: Systematic literature review</strong></a> <br />
     M. Martinez-Comesana<strong> X. Rigueira-Diaz</strong>, A. Larranaga-Janeiro, J. Martinez-Torres, I. Ocarranza-Prado, and D. Kreibel <br />
-    <i>Psicodicatica</i>, <strong>2023</strong> </p>
+    <i>Psicodicatica</i>, <strong>2023</strong>, (28), 2 </p>
   </li>
 </ul>
 
