--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <h2 id="research-on-machine-learning">Research on <em>machine learning</em></h2>
 <ul>
   <li>
-    <p><a href="https://wicc.gr""><strong>Real-time incremental machine learning for anomaly detection and surveillance in water quality</strong></a> <br />
+    <p><a href="https://wicc.gr"><strong>Real-time incremental machine learning for anomaly detection and surveillance in water quality</strong></a> <br />
     <strong>X. Rigueira</strong>, D. Olivieri, M. Araujo, M. Pazo, and E. Alonso <br />
     <i>Water Innovation and Circularity Conference<i>, <strong>June, 2023</strong>. Athens, Greece </p>
   </li>
@@ -120,6 +120,11 @@
 
 <h2 id="research-on-computer-vision">Research on <em>computer vision</em></h2>
 <ul>
+  <li>
+    <p><a href="https://www.mdpi.com/2076-3263/14/2/29"><strong>Automatic Characterization of Block-In-Matrix Rock Outcrops through Segmentation Algorithms and Its Application to an Archaeo-Mining Case Study</strong></a> <br />
+    A. Cristobal, <strong>X. Rigueira</strong>, I. Perez-Rey, X. Estevez-Ventosa, M. Pazo, M. L. Napoli, B. X. Curras and L. R. Alejano <br />
+    <i>Geosciences</i>, <strong>2024</strong>, 14 (2), 29 </p>
+  </li>
   <li>
     <p><a href="https://materconstrucc.revistas.csic.es/index.php/materconstrucc/article/view/3089"><strong>Computer Vision Application for Improved Product Traceability in the Granite Manufacturing Industry</strong></a> <br />
     <strong>X. Rigueira</strong>, J. Martinez, M. Araujo, and A. Recaman <br />
