--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <li>
     <p><a href="https://materconstrucc.revistas.csic.es/index.php/materconstrucc/article/view/3089"><strong>Computer Vision Application for Improved Product Traceability in the Granite Manufacturing Industry</strong></a> <br />
     <strong>X. Rigueira</strong>, J. Martinez, M. Araujo, and A. Recaman <br />
-    <i>Materiales de Construcción</i>, <strong>2022</strong>, 73, (351), 93-103 </p>
+    <i>Materiales de Construcción</i>, <strong>2022</strong>, 73 (351), 93-103 </p>
   </li>
 </ul>
 
@@ -137,7 +137,7 @@
   <li>
     <p><a href="https://www.sciencedirect.com/science/article/pii/S2530380523000072?via%3Dihub"><strong>Impact of artificial intelligence on assessment methods in primary and secondary education: Systematic literature review</strong></a> <br />
     M. Martinez-Comesana<strong> X. Rigueira-Diaz</strong>, A. Larranaga-Janeiro, J. Martinez-Torres, I. Ocarranza-Prado, and D. Kreibel <br />
-    <i>Psicodicatica</i>, <strong>2023</strong>, 28, (2) </p>
+    <i>Psicodicatica</i>, <strong>2023</strong>, 28 (2) </p>
   </li>
 </ul>
 
