--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       
 
 <h1 id="Xurxo Rigueira" style="text-align:center">Xurxo Rigueira</h1>
-<p>Ph.D. student and Research Assistant at the University of Vigo.</p> <p style="color:blue;">xurxo.rigueira@uvigo.es</p>
+<p>Ph.D. Student at the University of Vigo.</p> <p style="color:blue;">xurxo.rigueira@uvigo.es</p>
 <!-- <p><img align="right" width="180" height="150" src="x_rigueira_2.JPG" /></p> -->
 
 
