--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
 <h2 id="research-on-machine-learning">Research on <em>machine learning</em> in hydrology</h2>
 <ul>
   <li>
+    <p><a href="https://doi.org/10.1016/j.scitotenv.2024.172340"><strong>Enhancing water quality prediction for fluctuating missing data scenarios: A dynamic Bayesian network-based processing system to monitor cyanobacteria proliferation</strong></a> <br />
+    M. Pazo, S. Gerassis, M. Araujo, M. Antunes, and <strong>X. Rigueira</strong> <br />
+    <i>Science of the Total Environment<i>, <strong>2024</strong> </p>
+  </li>
+  <li>
     <p><a href="https://wicc.gr"><strong>Real-time incremental machine learning for anomaly detection and surveillance in water quality</strong></a> <br />
     <strong>X. Rigueira</strong>, D. Olivieri, M. Araujo, M. Pazo, and E. Alonso <br />
     <i>Water Innovation and Circularity Conference<i>, <strong>June, 2023</strong>. Athens, Greece </p>
