Update info last paper

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <li>
     <p><a href="https://doi.org/10.1016/j.scitotenv.2024.172340"><strong>Enhancing water quality prediction for fluctuating missing data scenarios: A dynamic Bayesian network-based processing system to monitor cyanobacteria proliferation</strong></a> <br />
     M. Pazo, S. Gerassis, M. Araujo, M. Antunes, and <strong>X. Rigueira</strong> <br />
-    <i>Science of the Total Environment<i>, <strong>2024</strong> </p>
+    <i>Science of the Total Environment<i>, <strong>2024</strong>, 927, 172340 </p>
   </li>
   <li>
     <p><a href="https://wicc.gr"><strong>Real-time incremental machine learning for anomaly detection and surveillance in water quality</strong></a> <br />
