--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <i>Science of the Total Environment<i>, <strong>2024</strong>, 927, 172340 </p>
   </li>
   <li>
-    <p><a href="https://wicc.gr"><strong>Real-time incremental machine learning for anomaly detection and surveillance in water quality</strong></a> <br />
+    <p><a href="WICC2023_Rigueira_Final.pdf" target="_blank">CV</a> <strong>Real-time incremental machine learning for anomaly detection and surveillance in water quality</strong></a> <br />
     <strong>X. Rigueira</strong>, D. Olivieri, M. Araujo, M. Pazo, and E. Alonso <br />
     <i>Water Innovation and Circularity Conference<i>, <strong>June, 2023</strong>. Athens, Greece </p>
   </li>
