--- a/index.html
+++ b/index.html
@@ -261,7 +261,11 @@
                         </li>
                         <li>
                             University of Vigo
-                            <span>M.S. in Mining and Energy Engineering</span>
+                            <span>M.S. in Mining Engineering</span>
+                        </li>
+                        <li>
+                            University of Vigo
+                            <span>B.S. in Mining and Energy Engineering</span>
                         </li>
                     </ul>
                 </div> <!--end s-about__block -->
@@ -816,7 +820,7 @@
             <p class="ss-copyright">
                 <!-- <span>© Copyright Hudson 2023</span>  -->
                 <span>Website: Original design by <a href="https://styleshout.com/" target="_blank">StyleShout</a> adapted by <a href="#0">Xurxo Rigueira</a> from heavily-modified <a href="#0">Mina Lee's</a> version. <a href="https://danielrjiang.github.io/" target="_blank" class="heart-icon">&#x2665;</a></span>
-                <span>Image: Created by <a href="https://openai.com/index/hello-gpt-4o/" target="_blank">GPT-4o</a></span>
+                <span>Image: <a href="https://openai.com/index/hello-gpt-4o/" target="_blank">GPT-4o</a></span>
             </p>
         </div>
 
