--- a/resources.html
+++ b/resources.html
@@ -155,7 +155,7 @@
             <div class="s-resourses__resource">
                 <span class="s-resources__resource-title">CV</span>
                 <span class="s-resources__resource-links">
-                    <a class="s-resources__resource-link" href=https://minalee-research.github.io/assets/pdf/minalee-cv.pdf target="_blank"><i class="fa-solid fa-paperclip"></i></a>
+                    <a class="s-resources__resource-link" href=https://xrigueira.github.io/assets/pdfs/CV_Xurxo_Rigueira.pdf target="_blank"><i class="fa-solid fa-paperclip"></i></a>
                 </span>
                 <p class="s-resources__resource-description">
                     Xurxo Rigueira is an Ph.D. Candidate in the Computer Science at the University of Vigo and a Visiting Researcher at Arizona State University. He previously earned an M.S. in Mining Engineering and a B.S. in Mining and Energy Engineering from the University of Vigo.
