Fixed award typo

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     <ul class="s-about__list">
                         <li>
                             <a href="https://erasmus-plus.ec.europa.eu/" target="_blank">
-                                ERASMUS+ Ph.D: Scholarship
+                                ERASMUS+ Ph.D. Scholarship
                                 <span>European Union</span>
                             </a>                                        
                         </li>
