--- a/index.html
+++ b/index.html
@@ -111,13 +111,11 @@
             <div class="row s-header__inner">
 
                 <div class="s-header__block">
-                    <!--  -->
-                    <div class="s-header__logo">
+                    <!-- <div class="s-header__logo">
                         <a class="logo" href="index.html">
                             <img src="images/logo.png" style="width: 72px; height: 72px">
                         </a>
-                    </div>
-                    <!--  -->
+                    </div> -->
 
                     <a class="s-header__menu-toggle" href="#0"><span>Menu</span></a>
                 </div> <!-- end s-header__block -->
