--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- favicons
     ================================================== -->
     <link rel="apple-touch-icon" sizes="180x180" href=https://xrigueira.github.io/assets/images/logo.png>
-    <link rel="icon" type="image/png" sizes="32x32" href=https://xrigueira.github.io/assets/images/logo.png>
+    <link rel="icon" type="image/png" sizes="32x32" href=https://xrigueira.github.io/assets/images/icons/favicon.ico>
 
     <!-- Font Awesome
     ================================================== -->
