--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="https://xrigueira.github.io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://xrigueira.github.io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://xrigueira.github.io/favicon-16x16.png">
-    <link rel="manifest" href="https://xrigueira.github.io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
     <!-- Font Awesome
     ================================================== -->
